# tinyrecursivemodels

./: .gitignore  README.md  pretrain.py  puzzle_dataset.py  pyproject.toml  train.py
.github/: copilot-instructions.md
evaluators/: arc.py  sudoku.py
models/: common.py  losses.py
scripts/: venv.rc
